; ModuleID = '/home/carl/AnghaBench/linux/drivers/infiniband/hw/ocrdma/extr_ocrdma_verbs.c_ocrdma_hwq_head.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/infiniband/hw/ocrdma/extr_ocrdma_verbs.c_ocrdma_hwq_head.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ocrdma_qp_hwq_info = type { i8*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.ocrdma_qp_hwq_info*)* @ocrdma_hwq_head to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @ocrdma_hwq_head(%struct.ocrdma_qp_hwq_info* %0) #0 {
  %2 = alloca %struct.ocrdma_qp_hwq_info*, align 8
  store %struct.ocrdma_qp_hwq_info* %0, %struct.ocrdma_qp_hwq_info** %2, align 8
  %3 = load %struct.ocrdma_qp_hwq_info*, %struct.ocrdma_qp_hwq_info** %2, align 8
  %4 = getelementptr inbounds %struct.ocrdma_qp_hwq_info, %struct.ocrdma_qp_hwq_info* %3, i32 0, i32 0
  %5 = load i8*, i8** %4, align 8
  %6 = load %struct.ocrdma_qp_hwq_info*, %struct.ocrdma_qp_hwq_info** %2, align 8
  %7 = getelementptr inbounds %struct.ocrdma_qp_hwq_info, %struct.ocrdma_qp_hwq_info* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.ocrdma_qp_hwq_info*, %struct.ocrdma_qp_hwq_info** %2, align 8
  %10 = getelementptr inbounds %struct.ocrdma_qp_hwq_info, %struct.ocrdma_qp_hwq_info* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = mul nsw i32 %8, %11
  %13 = sext i32 %12 to i64
  %14 = getelementptr i8, i8* %5, i64 %13
  ret i8* %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
